# rustapi

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-272bb7dacb2f8d1b79d3eacc86c809eb524fd97d71dee71698b019a613d00aee.json  query-40b6b49b5fbd231ca25180143e41c0c83f3544266a2519ba0fffb4612b121cf2.json  query-5d5e2b999cf176ea3f6e84b9feaf40a02aa4671c9870996dde587d1ea31b9789.json  query-8f82635e3566078cbe7a81940c474c0ae57472d8ef0c7274d3b1392b738e540e.json  query-bf02005c05f3bd5ec4bf60e50ece25638369926144b46b13780d35f3f5e095ff.json
migrations/: 20260314074818_create_users_table.sql
sql/user/: find_by_id.sql
src/: main.rs
src/domain/: error.rs  mod.rs  types.rs
src/domain/user/: entity.rs  mod.rs  repository.rs  user.rs  user_auth.rs
src/domain/user/vo/: auth_method.rs  email.rs  mod.rs  oauth_provider.rs  password_hash.rs  provider_user_id.rs  user_id.rs  user_name.rs
src/infrastructure/database/: connection.rs
src/infrastructure/repository/: user_repository.rs
src/infrastructure/user/: mod.rs  repository.rs  row.rs  user_row.rs
